--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,13 @@ jobs:
         - name: List all changed files
           run: |
                for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-               echo "$file was changed"
+               echo "$file was changed" >> report_tabs.log
                done
           
-          
+        - name: Upload report
+          uses: actions/upload-artifact@v2
+          with:
+           path: report_tabs.log
           
           
           
