--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,13 +19,13 @@ jobs:
         - name: List all changed files
           run: |
                for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-               echo "$file was changed" >> report_tabs.log
+               echo "The $file has `grep -P '\t' $file | wc -l` tabs" >> report.log
                done
           
         - name: Upload report
           uses: actions/upload-artifact@v2
           with:
-           path: report_tabs.log
+           path: report.log
           
           
           
