--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
-name: Count tabs in changd files
+name: Count tabs in changed files
 on:
   pull_request:
     branches: [ "main" ]
-  workflow_dispatch:
 jobs:
-  my_testing:
+  my_action:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v3
@@ -12,14 +11,12 @@ jobs:
             fetch-depth: 0
         - name: Get changed files
           id: changed-files
-          uses: tj-actions/changed-files@v35
-        
+          uses: tj-actions/changed-files@v35      
         - name: Found tabs in the files
           run: |
                for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
                echo "The $file has `grep -P '\t' $file | wc -l` tabs" >> report.log
-               done
-          
+               done        
         - name: Upload report
           uses: actions/upload-artifact@v2
           with:
