--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,29 +1,17 @@
-name: Count tabs in changd files
+name: Gittag
 on:
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+  push:
+    branches:
+      - "dev"
 jobs:
-  my_testing:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-          with:
-            fetch-depth: 0
-        - name: Get changed files
-          id: changed-files
-          uses: tj-actions/changed-files@v35
-        
-        - name: Found tabs in the files
-          run: |
-               for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-               echo "The $file has `grep -P '\t' $file | wc -l` tabs" >> report.log
-               done
-          
-        - name: Upload report
-          uses: actions/upload-artifact@v2
-          with:
-           path: report.log
-          
-          
-          
+  Gittag:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: little-core-labs/get-git-tag@v3.0.1
+        id: tagName
+      - name: Some other step
+        with:
+          tagname: ${{ steps.tagName.outputs.tag }}
+      - name: Yet another step
+        run: |
+         echo $GIT_TAG_NAME          
