--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,12 @@ jobs:
   Git_tag:
     runs-on: ubuntu-latest
     steps:
-      - name: Git get tag
-        uses: little-core-labs/get-git-tag@v3.0.1
-        id: tagName
-        with:
-          tagname: ${{ steps.tagName.outputs.tag }}
-      - name: Yet another steз
-        run: |
-         echo $GIT_TAG_NAME
+       - name: Extract tag name
+         id: tag
+         uses: actions/github-script@0.2.0
+         with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            return context.payload.ref.replace(/\/refs\/tags\//, '');
+       - name: Echo
+         run: echo ${{ steps.tag.outputs.result }}
