--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,10 @@ on:
     branches:
       - "dev"
 jobs:
-  Git_tag:
+  build:
     runs-on: ubuntu-latest
     steps:
+       - uses: actions/checkout@v3
        - name: Extract tag name
          id: tag
          uses: actions/github-script@0.2.0
